2004-11-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/stock-icons/Makefile.am: Typo fix.

	* gtk/gtkaboutdialog.c: Documentation updates.

2004-11-04  Bastien Nocera  <hadess@hadess.net>

	* gtk/gtkiconfactory.c: (get_default_icons): Make sure the RTL
	variants are used for media icons
	* gtk/stock-icons/Makefile.am: update following the addition of
	the 2 Play icon RTL variants
	* gtk/stock-icons/stock_media_play_rtl_16.png: added
	* gtk/stock-icons/stock_media_play_rtl_24.png: added

2004-11-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (new_folder_button_clicked): 
	Don't leak the path.  (#157301, Carlos Garnacho Parro)

	* gdk/x11/gdkdnd-x11.c (gdk_drag_motion): Handle the 
	case that the protocol version in the context is not 
	set yet.  (#157123, James Henstridge)

	* gtk/gtktreeview.c (gtk_tree_view_search_activate): Don't
	try to activate a node if the cursor is not valid.  

2004-11-03  James M. Cape  <jcape@ignore-your.tv>

	* gtk/gtkfilechooserbutton.c (update_dialog), (dialog_response_cb):
	Don't mysteriously go to the parent dir when hitting "Cancel" in
	folder mode (fixes #156971).

2004-11-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaccellabel.c (gtk_accel_label_expose_event): Don't
	access label->layout directly.  (#157080, Adam Hooper)

	* gtk/gtklabel.c (gtk_label_set_pattern_internal): Allow
	unsetting a pattern by passing NULL.  (#156720, Tristan Van Berkom)

	* gtk/gtkcombobox.c (gtk_combo_box_get_active): Don't crash 
	if the active_row reference has become invalid.  (#157156,
	Christophe Fergeau)
	
2004-11-02  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c (gtk_window_activate_key_after): As
	a last stage in GtkWindow key press handing, try adding
	window->mnemonic_modifier to event->state and see if it
	matches a mnemonic. (#53709, based on a patch by
	Pasupathi Duraisamy, patch by Owen Taylor)

	* gtk/gtkcellrenderercombo.c (gtk_cell_renderer_combo_class_init): 
	Doc additions.
