@@ -1,3 +1,7 @@
+2004-11-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkmain.c: Document new functions.
+
 2004-11-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/stock-icons/Makefile.am: Typo fix.
